src/test/deca/context/invalid/created/binary_exp/op_bool/and_int_boolean.deca
// Description :
//    test and entre un int et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) Type gauche int. Type droit boolean Type attendu: ‘boolean’
class A{}
{
int a;
boolean b;
boolean c = a && b;
}
